# hextof-processor

./: .gitignore  .readthedocs.yaml  InitializeSettings.py  Instructions_Frequently_used_Code.ipynb  ListOfTerms.md  MANIFEST.in  OfflineAnalysisSimple.ipynb  README.md  README_DEPR.md  dataframe_creator.py  environment.yml  environmentExpress.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setupDsgn.py
MaskingTool/: image.npy  makemask.py
Tutorial/: Tutorial.ipynb
XPSdoniachs/: README.md  XPSdoniachs_ext.cpp  setup.py
docs/: ListOfTerms.md  Makefile  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
doctrees/: environment.pickle  index.doctree
lib/: DldFlashDataframeCreator.py  DldFlashProcessorCy.pyx  DldProcessor.py  Makefile
processor/: BinnedArrays.py  DldFlashDataframeCreator.py  DldFlashDataframeCreatorExpress.py  DldFlashDataframeCreatorNew.py  DldProcessor.py  LabDataframeCreator.py  __init__.py  channels.json  channels_lab.json  pah.py  utils.py
settings/: Curcio_2017.ini  Curcio_2019.ini  DEFAULT.ini  Demsar_2017 (copy 1).ini  Demsar_2017.ini  Demsar_2017_2.ini  Demsar_2017_new.ini  Demsar_2020_2.ini  Demsar_2020_3.ini  Demsar_2020_4.ini  Demsar_2020_5.ini  Demsar_2020_6.ini  Dendzik_2020.ini  Durr_2020.ini  Jonas_2020.ini  Jonas_2020_express.ini  Kutnyakhov_2017.ini  Kutnyakhov_2019.ini  Pressacco_2018_2.ini  SETTINGS_LAB.ini  SETTINGS_old.ini  tutorial.ini
tests/: test_processor.py
tutorial/: Express data readout.ipynb  Notebook_DldFlashDataframeCreatorNew-Copy1.ipynb  Notebook_DldFlashDataframeCreatorNew.ipynb  Tutorial_01 - Binning calibrating and saving data.ipynb  Tutorial_01_Binning calibrating and saving data.ipynb  Tutorial_02_WSe2_W4f_Core-level.ipynb  Tutorial_03-1_WSe2_LCP_Run22125_22127_22130.ipynb  Tutorial_03-2_WSe2_Energy_calibration_Run22135-22138.ipynb  Tutorial_03-3_WSe2_Merging_datasets_with_corrections.ipynb  channels.json  config.yml  meeting 2904.ipynb  test_boost.py  timing_tests.ipynb
utilities/: calibration.py  diagnostics.py  (+2 more)
(+149 files in other folders)
