[metadata]
name = hextof-processor
version = 1.0.5
author = Yves Acremann, Steinn Ymir Agustsson, Davide Curcio, Maciej Dendzik, Michael Heber, Muhammad Zain Sohail, Rui Patrick Xian
author_email = zainsohail04@gmail.com
description = Hextof Offline Analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/momentoscope/hextof-processor
project_urls =
    Bug Tracker = https://github.com/momentoscope/hextof-processor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = processor
packages = find:
python_requires = >=3.8

[options.packages.find]
where = processor
