[metadata]
name = hextof-processor
version = 1.1.0
author = Yves Acremann, Steinn Ymir Agustsson, Davide Curcio, Maciej Dendzik, Michael Heber, Muhammad Zain Sohail, Rui Patrick Xian
author_email = zainsohail04@gmail.com
description = Hextof Offline Analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/momentoscope/hextof-processor
project_urls =
    Bug Tracker = https://github.com/momentoscope/hextof-processor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy>=1.14.2
    matplotlib>=2.1.0
    pandas>=0.20.3
    h5py>=2.7.1
    dask>=0.17.3
    xarray>=0.9.6
    tqdm>=4.31.1
    scipy>=1.2.1
    fastparquet>=0.2.1
    pyarrow>=0.12.1
    psutil
    tifffile

[options.packages.find]
where = src
